# numcodecs-rs

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  mkdocs.yml  properdocs.yml  search-index.js  settings.html  src-files.js
codecs/asinh/: Cargo.toml  README.md
codecs/asinh/src/: lib.rs
codecs/asinh/tests/: schema.json  schema.rs
codecs/bit-round/: Cargo.toml  README.md  docs
codecs/bit-round/src/: lib.rs
codecs/bit-round/tests/: schema.json  schema.rs
codecs/ebcc/: Cargo.toml  README.md  build.rs
codecs/ebcc/binding/: codec.rs  config.rs  error.rs  ffi.rs  lib.rs  numcodecs_impl.rs
codecs/ebcc/binding/examples/: basic_compression.rs  numcodecs_integration.rs
codecs/ebcc/binding/tests/: integration_tests.rs
codecs/ebcc/src/: lib.rs
codecs/ebcc/tests/: config.rs  schema.json  schema.rs
codecs/fixed-offset-scale/: Cargo.toml  README.md
codecs/fixed-offset-scale/src/: lib.rs
codecs/fixed-offset-scale/tests/: schema.json  schema.rs
codecs/fourier-network/: Cargo.toml  README.md
codecs/fourier-network/src/: lib.rs  modules.rs
codecs/fourier-network/tests/: config.rs  schema.json  schema.rs
codecs/identity/: Cargo.toml  README.md
codecs/identity/src/: lib.rs
codecs/identity/tests/: schema.json  schema.rs
codecs/linear-quantize/: Cargo.toml  README.md
codecs/linear-quantize/src/: lib.rs
codecs/linear-quantize/tests/: schema.json  schema.rs
codecs/log/: Cargo.toml  README.md  docs
codecs/log/src/: lib.rs
codecs/log/tests/: schema.json  schema.rs
codecs/pca/: Cargo.toml  README.md
codecs/pca/src/: lib.rs
codecs/pco/: Cargo.toml  README.md
codecs/pco/src/: lib.rs
codecs/pco/tests/: config.rs  schema.json  schema.rs
codecs/pressio/: Cargo.toml  README.md
codecs/pressio/src/: lib.rs
codecs/pressio/tests/: config.rs  schema.json  schema.rs
codecs/qpet-sperr/: Cargo.toml  README.md
codecs/qpet-sperr/src/: lib.rs
codecs/qpet-sperr/tests/: config.rs  schema.json  schema.rs
codecs/qpet-sz/: Cargo.toml  README.md
codecs/qpet-sz/src/: lib.rs
codecs/qpet-sz/tests/: config.rs  schema.json  schema.rs
codecs/random-projection/: Cargo.toml  README.md
codecs/random-projection/src/: lib.rs
codecs/random-projection/tests/: config.rs  schema.json  schema.rs
codecs/round/: Cargo.toml  README.md
codecs/round/src/: lib.rs
codecs/round/tests/: schema.json  schema.rs
codecs/sperr/: Cargo.toml  README.md
codecs/sperr/src/: lib.rs
codecs/sperr/tests/: config.rs  schema.json  schema.rs
codecs/stochastic-rounding/: Cargo.toml  README.md
codecs/stochastic-rounding/src/: lib.rs
codecs/stochastic-rounding/tests/: schema.json  schema.rs
codecs/swizzle-reshape/: Cargo.toml  README.md
codecs/swizzle-reshape/src/: lib.rs
codecs/swizzle-reshape/tests/: schema.json  schema.rs
codecs/sz3/: Cargo.toml  README.md
codecs/sz3/src/: lib.rs
codecs/sz3/tests/: config.rs  schema.json  schema.rs
codecs/uniform-noise/: Cargo.toml  README.md
codecs/uniform-noise/src/: lib.rs
codecs/uniform-noise/tests/: schema.json  schema.rs
codecs/zfp/: Cargo.toml  README.md
codecs/zfp-classic/: Cargo.toml  README.md
codecs/zfp-classic/src/: ffi.rs  lib.rs
codecs/zfp-classic/tests/: config.rs  schema.json  schema.rs
codecs/zfp/src/: ffi.rs  lib.rs
codecs/zfp/tests/: config.rs  schema.json  schema.rs
codecs/zlib/: Cargo.toml  README.md
codecs/zlib/src/: lib.rs
codecs/zlib/tests/: schema.json  schema.rs
crates/numcodecs-python/: Cargo.toml  README.md
crates/numcodecs-python/src/: adapter.rs  codec.rs  codec_class.rs  export.rs  lib.rs  pycodec.rs  registry.rs  schema.rs  utils.rs
crates/numcodecs-python/tests/: crc32.rs  export.rs  schema.rs
crates/numcodecs-wasm-builder/: Cargo.toml  README.md  flake.nix
crates/numcodecs-wasm-builder/buildenv/: flake.nix  include.h  include.hpp  rust-toolchain
crates/numcodecs-wasm-builder/src/: main.rs
crates/numcodecs-wasm-guest/: Cargo.toml  README.md
crates/numcodecs-wasm-guest/src/: convert.rs  external.rs  lib.rs
crates/numcodecs-wasm-host/: Cargo.toml  README.md
crates/numcodecs-wasm-host-reproducible/: Cargo.toml  README.md
crates/numcodecs-wasm-host-reproducible/src/: codec.rs  engine.rs  lib.rs  logging.rs  stdio.rs  tests.rs
crates/numcodecs-wasm-host-reproducible/src/transform/: instcnt.rs  mod.rs  nan.rs
crates/numcodecs-wasm-host-reproducible/tests/: round.rs  round.wasm
crates/numcodecs-wasm-host/src/: codec.rs  component.rs  error.rs  lib.rs  plugin.rs  registry.rs  store.rs  wit.rs
crates/numcodecs-wasm-logging/: Cargo.toml  README.md
crates/numcodecs-wasm-logging/src/: lib.rs
docs/: generate_api.py  index.md  requirements.txt  try-repl.md  try.md
numcodecs/: all.html  enum.AnyArrayAssignError.html  enum.AnyArrayBase.html  enum.AnyArrayDType.html  enum.AnyCowArray.html  fn.codec_from_config_with_id.html  fn.serialize_codec_config_with_id.html  index.html  sidebar-items.js  struct.ErasedDynCodec.html  struct.ErasedDynCodecType.html  struct.ErasedError.html  struct.StaticCodecConfig.html  struct.StaticCodecType.html  struct.StaticCodecVersion.html  trait.AnyRawData.html  trait.ArrayDType.html  trait.ArrayDataMutExt.html  trait.Codec.html  trait.DynCodec.html  trait.DynCodecType.html  trait.StaticCodec.html  type.AnyArcArray.html  type.AnyArray.html  type.AnyArrayView.html  type.AnyArrayViewMut.html  type.AnyCowArray.html  type.AnyRawArrayView.html  type.AnyRawArrayViewMut.html
numcodecs_asinh/: all.html  enum.AsinhCodecError.html  fn.asinh.html  fn.sinh.html  fn.sinh_into.html  index.html  sidebar-items.js  struct.AsinhCodec.html
numcodecs_bit_round/: all.html  enum.BitRoundCodecError.html  enum.BitRoundError.html  enum.BitRoundMode.html  fn.bit_round.html  index.html  sidebar-items.js  struct.BitRoundCodec.html  struct.NonNegative.html  trait.Float.html
numcodecs_ebcc/: all.html  enum.EbccChunkShape.html  enum.EbccCodecError.html  enum.EbccResidualType.html  fn.compress.html  fn.decompress.html  fn.decompress_into.html  index.html  sidebar-items.js  (+5 more)
(+3135 files in other folders)
