[workspace]
resolver = "2"
members = [
    "crates/numcodecs",
    "crates/numcodecs-python",

    "codecs/bit-round",
    "codecs/identity",
    "codecs/uniform-noise",
]

[workspace.package]
edition = "2021"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/numcodecs-rs"
license = "MPL-2.0"
rust-version = "1.64"

[workspace.dependencies]
# workspace-internal numcodecs crates
numcodecs = { version = "0.1", path = "crates/numcodecs", default-features = false }
numcodecs-python = { version = "0.2", path = "crates/numcodecs-python", default-features = false }

# workspace-internal codecs crates
numcodecs-bit-round = { version = "0.1", path = "codecs/bit-round", default-features = false }
numcodecs-identity = { version = "0.1", path = "codecs/identity", default-features = false }
numcodecs-uniform-noise = { version = "0.1", path = "codecs/uniform-noise", default-features = false }

# crates.io third-party dependencies
convert_case = { version = "0.6", default-features = false }
numpy = { version = "0.21", default-features = false }
ndarray = { version = "0.15", default-features = false } # keep in sync with numpy
pyo3 = { version = "0.21", default-features = false }
pythonize = { version = "0.21", default-features = false }
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }
serde-transcode = { version = "1.1", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
wyhash = { version = "0.5", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
unstable_features = "forbid"
unused_crate_dependencies = "warn"

missing_docs = "warn"

[workspace.lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
module_name_repetitions = "allow"

cargo = { priority = -1, level = "warn" }
cargo_common_metadata = "warn"
multiple_crate_versions = "warn"
