[workspace]
resolver = "2"
members = [
    "crates/numcodecs",
    "crates/numcodecs-python",
    "crates/numcodecs-wasm-guest",

    "codecs/asinh",
    "codecs/bit-round",
    "codecs/fixed-offset-scale",
    "codecs/fourier-network",
    "codecs/identity",
    "codecs/linear-quantize",
    "codecs/log",
    "codecs/random-projection",
    "codecs/reinterpret",
    "codecs/round",
    "codecs/swizzle-reshape",
    "codecs/sz3",
    "codecs/uniform-noise",
    "codecs/zfp",
    "codecs/zlib",
    "codecs/zstd",
]

[workspace.package]
edition = "2021"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/numcodecs-rs"
license = "MPL-2.0"
rust-version = "1.77"

[workspace.dependencies]
# workspace-internal numcodecs crates
numcodecs = { version = "0.2", path = "crates/numcodecs", default-features = false }
numcodecs-python = { version = "0.4", path = "crates/numcodecs-python", default-features = false }
numcodecs-wasm-guest = { version = "0.2", path = "crates/numcodecs-wasm-guest", default-features = false }

# workspace-internal codecs crates
numcodecs-asinh = { version = "0.2", path = "codecs/asinh", default-features = false }
numcodecs-bit-round = { version = "0.2", path = "codecs/bit-round", default-features = false }
numcodecs-fixed-offset-scale = { version = "0.2", path = "codecs/fixed-offset-scale", default-features = false }
numcodecs-fourier-network = { version = "0.1", path = "codecs/fourier-network", default-features = false }
numcodecs-identity = { version = "0.2", path = "codecs/identity", default-features = false }
numcodecs-linear-quantize = { version = "0.3", path = "codecs/linear-quantize", default-features = false }
numcodecs-log = { version = "0.3", path = "codecs/log", default-features = false }
numcodecs-random-projection = { version = "0.2", path = "codecs/random-projection", default-features = false }
numcodecs-reinterpret = { version = "0.2", path = "codecs/reinterpret", default-features = false }
numcodecs-round = { version = "0.2", path = "codecs/round", default-features = false }
numcodecs-swizzle-reshape = { version = "0.2", path = "codecs/swizzle-reshape", default-features = false }
numcodecs-sz3 = { version = "0.2", path = "codecs/sz3", default-features = false }
numcodecs-uniform-noise = { version = "0.2", path = "codecs/uniform-noise", default-features = false }
numcodecs-zfp = { version = "0.2", path = "codecs/zfp", default-features = false }
numcodecs-zlib = { version = "0.2", path = "codecs/zlib", default-features = false }
numcodecs-zstd = { version = "0.2", path = "codecs/zstd", default-features = false }

# crates.io third-party dependencies
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
convert_case = { version = "0.6", default-features = false }
format_serde_error = { version = "0.3", default-features = false }
log = { version = "0.4.17", default-features = false }
simple_logger = { version = "5.0", default-features = false }
miniz_oxide = { version = "0.8", default-features = false }
ndarray = { version = "0.16", default-features = false } # keep in sync with numpy
ndarray-rand = { version = "0.15", default-features = false }
numpy = { version = "0.23", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
postcard = { version = "1.0.8", default-features = false }
pyo3 = { version = "0.23.1", default-features = false }
pyo3-error = { version = "0.3", default-features = false }
pythonize = { version = "0.23", default-features = false }
rand = { version = "0.8.5", default-features = false }
schemars = { version = "=1.0.0-alpha.15", default-features = false }
serde = { version = "1.0.198", default-features = false }
serde-transcode = { version = "1.1", default-features = false }
serde_json = { version = "1.0.127", default-features = false }
serde_repr = { version = "0.1.3", default-features = false }
sz3 = { version = "0.1.1", default-features = false }
thiserror = { version = "1.0.61", default-features = false }
twofloat = { version = "0.7", default-features = false }
wit-bindgen = { version = "0.34", default-features = false }
wyhash = { version = "0.5", default-features = false }
zfp-sys = { version = "0.3.0", default-features = false }
zstd = { version = "0.13", default-features = false }
zstd-sys = { version = "2.0.12", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
unstable_features = "forbid"
unused_crate_dependencies = "warn"

missing_docs = "warn"

[workspace.lints.clippy]
complexity = { priority = -1, level = "warn" }
correctness = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
perf = { priority = -1, level = "warn" }
style = { priority = -1, level = "warn" }
suspicious = { priority = -1, level = "warn" }

unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
module_name_repetitions = "allow"

cargo = { priority = -1, level = "warn" }
cargo_common_metadata = "warn"
multiple_crate_versions = "warn"
