[workspace]
resolver = "2"
members = [
    "crates/numcodecs",
    "crates/numcodecs-python",
    "crates/numcodecs-wasm-builder",
    "crates/numcodecs-wasm-logging",
    "crates/numcodecs-wasm-guest",
    "crates/numcodecs-wasm-host",
    "crates/numcodecs-wasm-host-reproducible",

    "py/numcodecs-wasm",

    "codecs/asinh",
    "codecs/bit-round",
    "codecs/fixed-offset-scale",
    "codecs/fourier-network",
    "codecs/identity",
    "codecs/jpeg2000",
    "codecs/linear-quantize",
    "codecs/log",
    "codecs/pco",
    "codecs/qpet-sperr",
    "codecs/random-projection",
    "codecs/reinterpret",
    "codecs/round",
    "codecs/sperr",
    "codecs/stochastic-rounding",
    "codecs/swizzle-reshape",
    "codecs/sz3",
    "codecs/tthresh",
    "codecs/uniform-noise",
    "codecs/zfp",
    "codecs/zfp-classic",
    "codecs/zlib",
    "codecs/zstd",
]

[workspace.package]
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/numcodecs-rs"
license = "MPL-2.0"
rust-version = "1.87"

[workspace.dependencies]
# workspace-internal numcodecs crates
numcodecs = { version = "0.3.1", path = "crates/numcodecs", default-features = false }
numcodecs-python = { version = "0.7.1", path = "crates/numcodecs-python", default-features = false }
numcodecs-wasm-builder = { version = "0.2", path = "crates/numcodecs-wasm-builder", default-features = false }
numcodecs-wasm-guest = { version = "0.3", path = "crates/numcodecs-wasm-guest", default-features = false }
numcodecs-wasm-host = { version = "0.2", path = "crates/numcodecs-wasm-host", default-features = false }
numcodecs-wasm-host-reproducible = { version = "0.2.1", path = "crates/numcodecs-wasm-host-reproducible", default-features = false }
numcodecs-wasm-logging = { version = "0.2", path = "crates/numcodecs-wasm-logging", default-features = false }

numcodecs-wasm = { version = "0.2.2", path = "py/numcodecs-wasm", default-features = false }

# workspace-internal codecs crates
numcodecs-asinh = { version = "0.4", path = "codecs/asinh", default-features = false }
numcodecs-bit-round = { version = "0.4", path = "codecs/bit-round", default-features = false }
numcodecs-fixed-offset-scale = { version = "0.4", path = "codecs/fixed-offset-scale", default-features = false }
numcodecs-fourier-network = { version = "0.3", path = "codecs/fourier-network", default-features = false }
numcodecs-identity = { version = "0.4", path = "codecs/identity", default-features = false }
numcodecs-jpeg2000 = { version = "0.3", path = "codecs/jpeg2000", default-features = false }
numcodecs-linear-quantize = { version = "0.5", path = "codecs/linear-quantize", default-features = false }
numcodecs-log = { version = "0.5", path = "codecs/log", default-features = false }
numcodecs-pco = { version = "0.3", path = "codecs/pco", default-features = false }
numcodecs-qpet-sperr = { version = "0.2", path = "codecs/qpet-sperr", default-features = false }
numcodecs-random-projection = { version = "0.4", path = "codecs/random-projection", default-features = false }
numcodecs-reinterpret = { version = "0.4", path = "codecs/reinterpret", default-features = false }
numcodecs-round = { version = "0.5", path = "codecs/round", default-features = false }
numcodecs-sperr = { version = "0.2", path = "codecs/sperr", default-features = false }
numcodecs-stochastic-rounding = { version = "0.2", path = "codecs/stochastic-rounding", default-features = false }
numcodecs-swizzle-reshape = { version = "0.4", path = "codecs/swizzle-reshape", default-features = false }
numcodecs-sz3 = { version = "0.8", path = "codecs/sz3", default-features = false }
numcodecs-tthresh = { version = "0.3", path = "codecs/tthresh", default-features = false }
numcodecs-uniform-noise = { version = "0.4", path = "codecs/uniform-noise", default-features = false }
numcodecs-zfp = { version = "0.6", path = "codecs/zfp", default-features = false }
numcodecs-zfp-classic = { version = "0.4", path = "codecs/zfp-classic", default-features = false }
numcodecs-zlib = { version = "0.4", path = "codecs/zlib", default-features = false }
numcodecs-zstd = { version = "0.4", path = "codecs/zstd", default-features = false }

# crates.io third-party dependencies
anyhow = { version = "1.0.93", default-features = false }
burn = { version = "0.18", default-features = false }
clap = { version = "4.5", default-features = false }
convert_case = { version = "0.8", default-features = false }
format_serde_error = { version = "0.3", default-features = false }
indexmap = { version = "2.10", default-features = false }
itertools = { version = "0.14", default-features = false }
log = { version = "0.4.27", default-features = false }
miniz_oxide = { version = "0.8.5", default-features = false }
ndarray = { version = "0.16.1", default-features = false } # keep in sync with numpy
ndarray-rand = { version = "0.15", default-features = false }
numpy = { version = "0.26", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
openjpeg-sys = { version = "1.0", default-features = false }
pco = { version = "0.4.5", default-features = false }
polonius-the-crab = { version = "0.4", default-features = false }
postcard = { version = "1.0.8", default-features = false }
pyodide-webassembly-runtime-layer = { version = "0.10", default-features = false }
pyo3 = { version = "0.26", default-features = false }
pyo3-error = { version = "0.6", default-features = false }
pyo3-log = { version = "0.13.0", default-features = false }
pythonize = { version = "0.26", default-features = false }
qpet-sperr = { version = "0.2", default-features = false }
rand = { version = "0.9.1", default-features = false }
schemars = { version = "1.0.3", default-features = false }
scratch = { version = "1.0", default-features = false }
semver = { version = "1.0.23", default-features = false }
serde = { version = "1.0.218", default-features = false }
serde-transcode = { version = "1.1", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_repr = { version = "0.1.3", default-features = false }
simple_logger = { version = "5.0", default-features = false }
sperr = { version = "0.2", default-features = false }
sz3 = { version = "0.4.2", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tthresh = { version = "0.1", default-features = false }
twofloat = { version = "0.8", default-features = false }
vecmap-rs = { version = "0.2", default-features = false }
wac-graph = { version = "0.8.1", default-features = false }
wasi-sandboxed-component-provider = { version = "=0.2.6", default-features = false }
wasi-logger = { version = "0.1", default-features = false }
wasi-preview1-component-adapter-provider = { version = "37.0", default-features = false }
wasmparser = { version = "0.240", default-features = false }
wasmtime = { version = "37.0", default-features = false }
wasmtime_runtime_layer = { version = "37.0", default-features = false }
wasm-encoder = { version = "0.240", default-features = false }
wasm_runtime_layer = { version = "0.6", default-features = false }
wit-bindgen = { version = "0.46", default-features = false }
wit-component = { version = "0.240", default-features = false }
wit-parser = { version = "0.240", default-features = false }
wyhash = { version = "0.6", default-features = false }
zfp-sys = { version = "0.4.2", default-features = false }
zstd = { version = "0.13", default-features = false }
zstd-sys = { version = "2.0.16", default-features = false }

# git third-party dependencies with non-upstream fixes
wasm_component_layer = { git = "https://github.com/juntyr/wasm_component_layer.git", rev = "ad80189", version = "0.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
unstable_features = "forbid"
unused_crate_dependencies = "warn"

missing_docs = "warn"

[workspace.lints.clippy]
complexity = { priority = -1, level = "warn" }
correctness = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
perf = { priority = -1, level = "warn" }
style = { priority = -1, level = "warn" }
suspicious = { priority = -1, level = "warn" }

unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
module_name_repetitions = "allow"

cargo = { priority = -1, level = "warn" }
cargo_common_metadata = "warn"
multiple_crate_versions = "warn"
