[package]
name = "numcodecs-linear-quantize"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Linear Quantization codec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["linear", "quantization", "numcodecs", "compression", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true, features = ["std"] }
numcodecs = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_repr = { workspace = true }
thiserror = { workspace = true }
twofloat = { workspace = true, features = ["std"] }

[lints]
workspace = true
