[package]
name = "numcodecs-linear-quantize"
version = "0.5.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Linear Quantization codec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["linear", "quantization", "numcodecs", "compression", "encoding"]

include = ["/src", "/LICENSE", "/docs/katex.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true, features = ["std"] }
numcodecs = { workspace = true }
num-traits = { workspace = true, features = ["std"] }
postcard = { workspace = true }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_repr = { workspace = true }
thiserror = { workspace = true }
twofloat = { workspace = true, features = ["std"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/katex.html"]
