[package]
name = "numcodecs-pca"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "PCA codec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["pca", "numcodecs", "compression", "encoding"]

[dependencies]
nalgebra = { workspace = true }
ndarray = { workspace = true, features = ["std"] }
ndarray-rand = { workspace = true }
nshare = { workspace = true, features = ["ndarray", "nalgebra", "nalgebra_std"] }
numcodecs = { workspace = true }
num-traits = { workspace = true, features = ["std"] }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true, features = ["std", "derive"] }
thiserror = { workspace = true }
wyhash = { workspace = true }

[dev-dependencies]
ndarray-rand = { workspace = true }

[lints]
workspace = true
