[package]
name = "numcodecs-pco"
version = "0.3.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Pcodec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["pco", "numcodecs", "compression", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true, features = ["std"] }
numcodecs = { workspace = true }
pco = { workspace = true }
postcard = { workspace = true }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_repr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
