[package]
name = "numcodecs-random-projection"
version = "0.2.1"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Random Projection codec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["random", "projection", "numcodecs", "compression", "encoding"]

include = ["/src", "/LICENSE", "/docs/katex.html"]

[dependencies]
ndarray = { workspace = true, features = ["std"] }
numcodecs = { workspace = true }
num-traits = { workspace = true, features = ["std"] }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true, features = ["std", "derive"] }
thiserror = { workspace = true }

[dev-dependencies]
ndarray-rand = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/katex.html"]
